--- a/index.html
+++ b/index.html
@@ -1238,7 +1238,7 @@ let posts = [
     },
     {
         id: 'post-6',
-        title: 'Anderson Mario',
+        title: 'Angola o',
         excerpt: 'Anderson Mario o cantor que e conhecido pelo seu estilo único e estravagante, sua carreira musical e marcada por inúmeros sucesso.',
         category: 'Opinião',
         author: 'Carolina Souza',
