--- a/post.html
+++ b/post.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+de<!DOCTYPE html>
 <html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
@@ -1071,13 +1071,13 @@ nav ul li a:hover::after {
         let musicItems = [
             {
                 id: 'music-1',
-                title: 'Duas mulheres',
-                artist: 'Cjota ft Vulgo',
+                title: 'Vida Urgente',
+                artist: 'Stanna baby feat Elson Mendez',
                 type: 'mp3',
-                cover: '9.jpg',
-                file: 'Duas.mp3',
-                likes: 1245,
-                downloads: 892
+                cover: 'sta.jpg',
+                file: 'sta.mp3',
+                likes: 8,
+                downloads: 2
             },
             {
                 id: 'music-2',
