--- a/news.html
+++ b/news.html
@@ -639,24 +639,24 @@ function loadSavedData() {
         newsItems = [
             {
                 id: 'news-1',
-                title: 'Festival Sonoridades Anuncia Line-up Completo para Edição 2025',
-                excerpt: 'Um dos maiores festivais independentes do país revelou todos os artistas que se apresentarão nos três dias de evento.',
-                content: 'O Festival Sonoridades, que acontecerá entre os dias 15 e 17 de maio em São Paulo, anunciou hoje a programação completa do evento. Entre as atrações principais estão nomes como Banda Uó, Nação Zumbi e Pabllo Vittar. Além dos palcos principais, o festival contará com áreas dedicadas a DJs emergentes e um espaço para performances experimentais. Os ingressos já estão à venda no site oficial do evento.',
-                category: 'Eventos',
-                author: 'Marina Oliveira',
-                date: '14 Abr 2025',
-                image: 'imagem/gato.jpg',
+                title: 'Novos talentos no mercado da música Angolana',
+                excerpt: 'Stanna baby e Elson duas novas vozes do rep angolano, demostrando que a música e uma arte fizeram o lançamento da sua mais recente musica com o titul Vida Urgente.',
+                content: 'A musica fala sobre superação no mundo da música, já que não e facil focar no sonho de seu música, stanna e Elson são cantor solo que por setem amigos decidiram cantar uma música junto, gostaste da nossa breve explicação se vocês quiserem na próxima falamos da vida de um deles e como chogou até aqui😲.',
+                category: 'Destaque',
+                author: 'Guilherme Diogo ',
+                date: '22 junho 2025',
+                image: 'sta.jpg',
                 highlight: true
             },
             {
                 id: 'news-2',
-                title: 'Novo Aplicativo Promete Revolucionar a Distribuição Musical no Brasil',
+                title: 'Cjota ',
                 excerpt: 'Plataforma desenvolvida por startup brasileira oferece divisão de lucros mais justa para artistas independentes.',
                 content: 'A MusicFlow, startup brasileira fundada por ex-funcionários de grandes gravadoras, lançou esta semana um aplicativo que promete mudar a forma como os artistas independentes distribuem suas músicas. Com taxas menores que as plataformas tradicionais e um sistema de divisão de lucros baseado em blockchain, a empresa afirma que consegue repassar até 85% da receita diretamente para os músicos. O serviço já conta com mais de 500 artistas cadastrados durante sua fase beta.',
                 category: 'Tecnologia',
                 author: 'Rafael Torres',
                 date: '12 Abr 2025',
-                image: 'imagem/gato.jpg',
+                image: '9.jpg',
                 highlight: false
             }
         ];
