--- a/index.html
+++ b/index.html
@@ -1238,12 +1238,12 @@ let posts = [
     },
     {
         id: 'post-6',
-        title: 'Angola o',
-        excerpt: 'Anderson Mario o cantor que e conhecido pelo seu estilo único e estravagante, sua carreira musical e marcada por inúmeros sucesso.',
-        category: 'Opinião',
-        author: 'Carolina Souza',
-        date: '8 Jun 2023',
-        image: '2.jpg',
+        title: 'Nova musica de Stanna baby feat Elson Lemos',
+        excerpt: 'Depois de muito tempo parado Stanna baby lança sua nova música intitulada Vida Urgente com a participação do cantor Elson Lemos a musica ja esta disponível no blog baixa já.',
+        category: 'Descobertas',
+        author: 'Top-fama',
+        date: '22 Jun 2025',
+        image: 'sta.jpg',
         section: 'trending'
     }
 ];
