--- a/post.html
+++ b/post.html
@@ -1076,8 +1076,8 @@ nav ul li a:hover::after {
                 type: 'mp3',
                 cover: 'sta.jpg',
                 file: 'sta.mp3',
-                likes: 8,
-                downloads: 2
+                likes: 10,
+                downloads: 6
             },
             {
                 id: 'music-2',
@@ -1086,29 +1086,20 @@ nav ul li a:hover::after {
                 type: 'mp3',
                 cover: 'Viagem.jpg',
                 file: 'Viagem.mp3',
-                likes: 982,
-                downloads: 756
+                likes: 45,
+                downloads: 17
             },
             {
     id: 'music-2',
-    title: 'Opções',
-    artist: 'Chefin ft Veigh,Kayblak',
+    title: 'Duas Mulher ',
+    artist: 'Cjota feat Vulgo FK',
     type: 'mp3',
-    cover: '11.jpg',
-    file: 'Ch.mp3',
+    cover: '9.jpg',
+    file: 'Duas.mp3',
     likes: 982,
     downloads: 756
 },
-{
-    id: 'music-2',
-    title: 'Mundo Covarde',
-    artist: 'Poze do rodo ft Oruam',
-    type: 'mp3',
-    cover: '10.jpg',
-    file: 'Covarde.mp3',
-    likes: 982,
-    downloads: 756
-},
+
             {
                 id: 'music-3',
                 title: 'Shape of You',
@@ -1124,30 +1115,11 @@ nav ul li a:hover::after {
     artist: 'Veigh',
     type: 'mp3',
     cover: '6.jpg',
-    file: 'Vg.mp3',
+    file: 'Vg (1).mp3',
     likes: 982,
     downloads: 756
 },
-{
-    id: 'music-2',
-    title: 'Até a próxima',
-    artist: 'Vmz',
-    type: 'mp3',
-    cover: '5.jpeg',
-    file: 'Vmz.mp3',
-    likes: 982,
-    downloads: 756
-},
-            {
-                id: 'music-4',
-                title: 'Morte do autotune',
-                artist: 'Matuê',
-                type: 'mp3',
-                cover: '8.jpg',
-                file: 'Mat.mp3',
-                likes: 765,
-                downloads: 543
-            },
+            
             {
                 id: 'music-5',
                 title: 'Uptown Funk',
