--- a/news.html
+++ b/news.html
@@ -654,7 +654,7 @@ function loadSavedData() {
                 excerpt: 'Plataforma desenvolvida por startup brasileira oferece divisão de lucros mais justa para artistas independentes.',
                 content: 'A MusicFlow, startup brasileira fundada por ex-funcionários de grandes gravadoras, lançou esta semana um aplicativo que promete mudar a forma como os artistas independentes distribuem suas músicas. Com taxas menores que as plataformas tradicionais e um sistema de divisão de lucros baseado em blockchain, a empresa afirma que consegue repassar até 85% da receita diretamente para os músicos. O serviço já conta com mais de 500 artistas cadastrados durante sua fase beta.',
                 category: 'Tecnologia',
-                author: 'Rafael Torres',
+                author: 'Rafael Guerra ',
                 date: '12 Abr 2025',
                 image: '9.jpg',
                 highlight: false
